--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -11,6 +11,6 @@ body{
   padding: 0;
   margin: 0;
   font-family: 'Lato', sans-serif;
-  background-color: white;
+  background-color: black;
   font-weight: 400;
 }
