--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,3 +1,9 @@
-
+.container {
+  position: relative;
+  font-family: "Lato", sans-serif;
+  height: 568px;
+  width: 320px;
+  border: 2px solid rgba(0, 0, 0, 0.5);
+  border-radius: 10px; }
 
 /*# sourceMappingURL=styles.css.map */
