--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,16 +1,25 @@
-html{
-  font: 100%;
-}
-​
-* {
-  box-sizing: border-box;
-}
-​
-body{
-  font-size: 1em;
-  padding: 0;
-  margin: 0;
-  font-family: 'Lato', sans-serif;
-  background-color: black;
-  font-weight: 400;
+// html{
+//   font: 100%;
+// }
+// ​
+// * {
+//   box-sizing: border-box;
+// }
+// ​
+// body{
+//   font-size: 1em;
+//   padding: 0;
+//   margin: 0;
+//   font-family: 'Lato', sans-serif;
+//   background-color: black;
+//   font-weight: 400;
+// }
+
+.container{
+  position: relative;
+  font-family: "Lato", sans-serif;
+  height: 568px;
+  width: 320px;
+  border: 2px solid rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
 }
