--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,9 +1,50 @@
 .container{
   position: relative;
   font-family: "Lato", sans-serif;
-  height: 80%;;
-  width: 80%;
+  height: 100%;;
+  width: 100%;
   border: 2px solid rgba(0, 0, 0, 0.5);
   border-radius: 11px;
-  border: solid 1px red;
+  // border: solid 1px red;
+}
+
+
+/*  SECTIONS  */
+.section {
+	clear: both;
+	padding: 0px;
+	margin: 0px;
+}
+
+/*  COLUMN SETUP  */
+.col {
+	display: block;
+	float:left;
+	margin: 1% 0 1% 1.6%;
+}
+.col:first-child { margin-left: 0; }
+
+/*  GROUPING  */
+.group:before,
+.group:after { content:""; display:table; }
+.group:after { clear:both;}
+.group { zoom:1; /* For IE 6/7 */ }
+/*  GRID OF TWO  */
+.span_2_of_2 {
+	width: 100%;
+}
+.span_1_of_2 {
+	width: 49.2%;
+}
+
+/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+
+@media only screen and (max-width: 480px) {
+	.col {
+		margin: 1% 0 1% 0%;
+	}
+}
+
+@media only screen and (max-width: 480px) {
+	.span_2_of_2, .span_1_of_2 { width: 100%; }
 }
