--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,10 +1,10 @@
 .container {
   position: relative;
   font-family: "Lato", sans-serif;
-  height: 100%;
-  width: 100%;
+  height: 80%;
+  width: 80%;
   border: 2px solid rgba(0, 0, 0, 0.5);
-  border-radius: 11px; }
+  border: solid 1px red; }
 
 /*  SECTIONS  */
 .section {
