--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -5,8 +5,63 @@
   width: 80%;
   border: 2px solid rgba(0, 0, 0, 0.5);
   // border-radius: 11px;
-  border: solid 1px red;
+  border: solid 1px black;
 }
+/**********************************************/
+/***    GLOBAL FORM  *************************/
+
+
+
+
+  /*******  APPOINTMENTS HOMEPAGE STYLING  ****/
+#mainpage{
+  position: relative;
+  font-family: "Lato", sans-serif;
+  height: 80%;
+  width: 80%px;
+  border: 2px solid black;
+  // border-radius: 10px;
+  h2{
+    padding: .5em 0;
+    margin: 0 .5em .5em;
+    text-align: center;
+    font-size: 2em;
+    color: green;
+  }
+  .mainAdmPage{
+    border-bottom: 2px solid grey;
+      button{
+      position: relative;
+      width: 4em;
+      height: 4em;
+      }
+      .link{
+        display: inline-block;
+        float: right;
+        width: 3em;
+        height: 3em;
+      }
+  }
+
+
+
+}
+//   .homepage-li{
+//     position: relative;
+//     display: flex;
+//     margin: 1em 0 1em 1em;
+//   }
+//   .left-side{
+//     text-align: left;
+//     float: left;
+//     height: 5em;
+//     width: 20%;
+//     display: inline-block;
+//     background-color: $green;
+//     font-weight: 700;
+//     color: white;
+//
+// }
 
 
 /*  SECTIONS  */
