--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -10,7 +10,13 @@
 }
 /**********************************************/
 /***    GLOBAL FORM  *************************/
-
+h1{
+  text-align: center;
+  font-size: 3em;
+  font-weight: 100;
+  color: white;
+  font-family: "Lato", Verdana, sans-serif;
+}
 
 
 
@@ -23,7 +29,7 @@
   border: 2px solid black;
   // border-radius: 10px;
   .mainAdmPage{
-    background-color: black;
+    background-color: black;/**  header nav-bar color  **/
     padding-top: 3em;
     // margin: 0 .6em .6em;
     border-bottom: 2px solid grey;
@@ -60,7 +66,7 @@
   }
   .add-new-item{
     border-radius: 5px;
-    margin-left: 45em;
+    margin-left: 50em;
     width: 20em;
     height: 3em;
     cursor:pointer;
@@ -81,8 +87,9 @@
   border: 2px solid black;
   .adminNewPage{
     padding-top: 3em;
-    margin: 0 .6em .6em;
+    // margin: 0 .6em .6em;
     border-bottom: 2px solid grey;
+    background-color: darkgrey;/****  header/nav-bar color **/
       #back-button{
         padding: 0.2em 0.5em;
         color: grey;
@@ -104,7 +111,31 @@
             float: right;
             width: 4em;
             height: 4em;
+            cursor: pointer;
           }
+  }
+    #input-image{
+      margin-left: 2em;
+      width: 10em;
+      height: 10em;
+        }
+    #input-price{
+      margin-top: 2em;
+      width: 10em;
+      height: 5em;
+        }
+    #input-description{
+      margin-top: 1.5em;
+      width: 40em;
+      height: 5em;
+        }
+    .new-page-btn{
+      border-radius: 5px;
+      margin-left: 45em;
+      width: 20em;
+      height: 3em;
+      cursor:pointer;
+
     }
 }
 
@@ -119,8 +150,9 @@
   border: 2px solid black;
   .adminEditPage{
     padding-top: 3em;
-    margin: 0 .6em .6em;
+    // margin: 0 .6em .6em;
     border-bottom: 2px solid grey;
+    background-color: #90C9D4;/** header nav-bar color  **/
       #back-button{
         padding: 0.2em 0.5em;
         color: grey;
@@ -144,6 +176,28 @@
             height: 4em;
           }
     }
+    #input-image{
+      margin-left: 2em;
+      width: 10em;
+      height: 10em;
+        }
+    #input-price{
+      margin-top: 2em;
+      width: 10em;
+      height: 5em;
+        }
+    #input-description{
+      margin-top: 1.5em;
+      width: 40em;
+      height: 5em;
+        }
+        .save-item-btn{
+          border-radius: 5px;
+          margin-left: 45em;
+          width: 20em;
+          height: 3em;
+          cursor:pointer;
+        }
 }
 
 //   .homepage-li{
