Add links instead of buttons in the nav bar

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -33,18 +33,20 @@ h1{
     padding-top: 3em;
     // margin: 0 .6em .6em;
     border-bottom: 2px solid grey;
-      button{
-      position: relative;
-      width: 4em;
+      // button{
+      // position: relative;
+      // width: 4em;
       // height: 4em;
-      }
+      // }
       .link{
+
         display: inline-block;
         float: right;
         width: 4em;
         height: 4em;
         cursor: pointer;
       }
+
   }
   #input-image{
     margin-left: 2em;
@@ -101,11 +103,11 @@ h1{
         left: 0;
         display: inline-block;
           }
-          button{
-          position: relative;
-          width: 4em;
+          // button{
+          // position: relative;
+          // width: 4em;
           // height: 4em;
-          }
+          // }
           .link{
             display: inline-block;
             float: right;
@@ -164,11 +166,11 @@ h1{
         left: 0;
         display: inline-block;
           }
-          button{
-          position: relative;
-          width: 4em;
+          // button{
+          // position: relative;
+          // width: 4em;
           // height: 4em;
-          }
+          // }
           .link{
             display: inline-block;
             float: right;
