--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -28,6 +28,8 @@ h1 {
     padding-top: 3em;
     border-bottom: 2px solid grey; }
     #mainpage .mainAdmPage .link {
+      text-decoration: none;
+      text-decoration-color: white;
       display: inline-block;
       float: right;
       width: 4em;
@@ -87,14 +89,16 @@ h1 {
     margin-left: 2em;
     width: 10em;
     height: 10em; }
+  #newpage .name {
+    margin-left: 20em; }
   #newpage #input-price {
-    margin-top: 2em;
-    width: 10em;
-    height: 5em; }
+    margin-top: 0em;
+    width: 6em;
+    height: 2em; }
   #newpage #input-description {
-    margin-top: 1.5em;
-    width: 40em;
-    height: 5em; }
+    margin-top: .5em;
+    width: 23em;
+    height: 2em; }
   #newpage .new-page-btn {
     border-radius: 5px;
     margin-left: 45em;
@@ -139,8 +143,8 @@ h1 {
     height: 5em; }
   #editpage #input-description {
     margin-top: 1.5em;
-    width: 40em;
-    height: 5em; }
+    width: 23em;
+    height: 4em; }
   #editpage .save-item-btn {
     border-radius: 5px;
     margin-left: 45em;
