Add submit and repeat structure to new item page

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -136,14 +136,16 @@ h1{
       width: 23em;
       height: 2em;
         }
-    .new-page-btn{
-      border-radius: 5px;
-      margin-left: 45em;
-      width: 20em;
-      height: 3em;
-      cursor:pointer;
+        .new-page-btn{
+          border-radius: 5px;
+          
+          // margin-left: 45em;
+          // width: 3em;
+          // height: 3em;
+          cursor:pointer;
 
     }
+
 }
 
 
