--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -20,6 +20,8 @@ h1{
 
 
 
+
+
 /*******  MAINPAGE STYLING  ****/
 #mainpage{
   position: relative;
@@ -38,21 +40,28 @@ h1{
       // width: 4em;
       // height: 4em;
       // }
-      .link{
+      .header{
+        background-color: grey;
+        height: 3em;
+      }
+      .link a{
+        padding-left: 1em;
+        padding-right: 1em;
+        font-size: 25px;
         text-decoration: none;
-        text-decoration-color: white;
+        color: white;
         display: inline-block;
-        float: right;
+        float: left;
         width: 4em;
-        height: 4em;
+        height: 6em;
         cursor: pointer;
       }
 
   }
   #input-image{
     margin-left: 2em;
-    width: 10em;
-    height: 10em;
+    width: 20em;
+    height: 20em;
   }
   #input-description{
     margin-top: 1.5em;
@@ -138,7 +147,7 @@ h1{
         }
         .new-page-btn{
           border-radius: 5px;
-          
+
           // margin-left: 45em;
           // width: 3em;
           // height: 3em;
