--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,8 +1,9 @@
 .container{
+
   position: relative;
   font-family: "Lato", sans-serif;
-  height: 100%;;
-  width: 100%;
+  height: 90%;;
+  width: 90%;
   margin: 0em 4em 0em 4em;
   // border: 2px solid rgba(0, 0, 0, 0.5);
   // border-radius: 11px;
@@ -12,10 +13,17 @@
 /***    GLOBAL FORM  *************************/
 h1{
   text-align: center;
-  font-size: 3em;
-  font-weight: 100;
+  font-size: 5em;
+  font-weight: normal;
   color: white;
   font-family: "Lato", Verdana, sans-serif;
+}
+
+.fa.fa-cogs{
+  padding-top: 0.2em;
+  color: white;
+  font-size: 20px;
+
 }
 
 
@@ -31,7 +39,8 @@ h1{
   border: 2px solid black;
   // border-radius: 10px;
   .mainAdmPage{
-    background-color: black;/**  header nav-bar color  **/
+    background-image: url("http://i2.mirror.co.uk/incoming/article7914302.ece/ALTERNATES/s615b/A-swarm-of-bees.jpg");/**  header nav-bar color  **/
+    background-position: center;
     padding-top: 3em;
     // margin: 0 .6em .6em;
     border-bottom: 2px solid grey;
@@ -41,7 +50,7 @@ h1{
       // height: 4em;
       // }
       .header{
-        background-color: grey;
+        background-color: black;
         height: 3em;
       }
       .link a{
@@ -51,7 +60,7 @@ h1{
         text-decoration: none;
         color: white;
         display: inline-block;
-        float: left;
+        float: right;
         width: 4em;
         height: 6em;
         cursor: pointer;
