--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,8 +1,8 @@
 .container{
 
   position: relative;
-  font-family: "Lato", sans-serif;
-  height: 90%;;
+  font-family: "Open Sans Condensed", sans-serif;
+  height: 90%;
   width: 90%;
   margin: 0em 4em 0em 4em;
   // border: 2px solid rgba(0, 0, 0, 0.5);
@@ -12,11 +12,11 @@
 /**********************************************/
 /***    GLOBAL FORM  *************************/
 h1{
-  text-align: center;
+  float: left;
   font-size: 5em;
   font-weight: normal;
-  color: white;
-  font-family: "Lato", Verdana, sans-serif;
+  color: #FAF7CF;
+  font-family: "Grand Hotel", Verdana, sans-serif;
 }
 
 .fa.fa-cogs{
@@ -33,7 +33,7 @@ h1{
 /*******  MAINPAGE STYLING  ****/
 #mainpage{
   position: relative;
-  font-family: "Lato", sans-serif;
+  font-family: "Open Sans Condensed", sans-serif;
   height: 100%;
   width: 100%;
   border: 2px solid black;
@@ -41,6 +41,7 @@ h1{
   .mainAdmPage{
     background-image: url("http://i2.mirror.co.uk/incoming/article7914302.ece/ALTERNATES/s615b/A-swarm-of-bees.jpg");/**  header nav-bar color  **/
     background-position: center;
+    height: 6em;
     padding-top: 3em;
     // margin: 0 .6em .6em;
     border-bottom: 2px solid grey;
@@ -51,7 +52,7 @@ h1{
       // }
       .header{
         background-color: black;
-        height: 3em;
+        height: 4em;
       }
       .link a{
         padding-left: 1em;
