--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -45,11 +45,7 @@ h1{
     padding-top: 3em;
     // margin: 0 .6em .6em;
     border-bottom: 2px solid grey;
-      // button{
-      // position: relative;
-      // width: 4em;
-      // height: 4em;
-      // }
+
       .header{
         background-color: black;
         height: 4em;
@@ -103,39 +99,52 @@ h1{
 /*********   NEWPAGE STYLING *********/
 #newpage{
   position: relative;
-  font-family: "Lato", sans-serif;
+  font-family: "Open Sans Condensed", sans-serif;
   height: 100%;
   width: 100%;
   border: 2px solid black;
   .adminNewPage{
+    background-image: url("http://i2.mirror.co.uk/incoming/article7914302.ece/ALTERNATES/s615b/A-swarm-of-bees.jpg");/**  header nav-bar color  **/
+    background-position: center;
+    height: 6em;
     padding-top: 3em;
     // margin: 0 .6em .6em;
     border-bottom: 2px solid grey;
-    background-color: darkgrey;/****  header/nav-bar color **/
-      #back-button{
-        padding: 0.2em 0.5em;
-        color: grey;
-        border: none;
-        background: none;
-        font-size: 2em;
-        position: absolute;
-        top: 0;
-        left: 0;
+    #back-button{
+      padding: 0.2em 0.5em;
+      color: white;
+      border: none;
+      background: none;
+      font-size: 2.5em;
+      font-weight: bold;
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: inline-block;
+
+    }
+
+      .header{
+        background-color: black;
+        height: 4em;
+      }
+      .link a{
+        padding-left: 1em;
+        padding-right: 1em;
+        font-size: 25px;
+        text-decoration: none;
+        color: white;
         display: inline-block;
-          }
-          // button{
-          // position: relative;
-          // width: 4em;
-          // height: 4em;
-          // }
-          .link{
-            display: inline-block;
-            float: right;
-            width: 4em;
-            height: 4em;
-            cursor: pointer;
-          }
+        float: right;
+        width: 4em;
+        height: 6em;
+        cursor: pointer;
+      }
+
+
   }
+
+
     #input-image{
       margin-left: 2em;
       width: 10em;
@@ -172,38 +181,47 @@ h1{
 /****************************************************/
 #editpage{
   position: relative;
-  font-family: "Lato", sans-serif;
+  font-family: "Open Sans Condensed", sans-serif;
   height: 100%;
   width: 100%;
   border: 2px solid black;
   .adminEditPage{
+    background-image: url("http://i2.mirror.co.uk/incoming/article7914302.ece/ALTERNATES/s615b/A-swarm-of-bees.jpg");
+    background-position: center;
+    height: 6em;
     padding-top: 3em;
     // margin: 0 .6em .6em;
     border-bottom: 2px solid grey;
-    background-color: #90C9D4;/** header nav-bar color  **/
-      #back-button{
-        padding: 0.2em 0.5em;
-        color: grey;
-        border: none;
-        background: none;
-        font-size: 2em;
-        position: absolute;
-        top: 0;
-        left: 0;
-        display: inline-block;
-          }
-          // button{
-          // position: relative;
-          // width: 4em;
-          // height: 4em;
-          // }
-          .link{
-            display: inline-block;
-            float: right;
-            width: 4em;
-            height: 4em;
-          }
+    #back-button{
+      padding: 0.2em 0.5em;
+      color: white;
+      border: none;
+      background: none;
+      font-size: 2.5em;
+      font-weight: bold;
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: inline-block;
+
     }
+    .header{
+      background-color: black;
+      height: 4em;
+    }
+    .link a{
+      padding-left: 1em;
+      padding-right: 1em;
+      font-size: 25px;
+      text-decoration: none;
+      color: white;
+      display: inline-block;
+      float: right;
+      width: 4em;
+      height: 6em;
+      cursor: pointer;
+    }
+  }
     #input-image{
       margin-left: 2em;
       width: 10em;
@@ -218,9 +236,6 @@ h1{
       margin-top: 1.5em;
       width: 23em;
       height: 4em;
-        h3{
-
-        }
         }
         .save-item-btn{
           border-radius: 5px;
