--- a/assets/styles/consumer_styles.css
+++ b/assets/styles/consumer_styles.css
@@ -230,7 +230,8 @@
     height: 0; } }
 body {
   background-color: #E8E8E8;
-  font-family: Roboto, sans-serif; }
+  font-family: Roboto, sans-serif;
+  color: gray; }
 
 .landingPageHead {
   font-family: Grand Hotel, cursive;
@@ -334,7 +335,7 @@ a:visited {
   margin: auto; }
 
 .detailPic {
-  width: 200px;
+  width: 300px;
   height: 200px; }
 
 .productDetail {
@@ -347,8 +348,12 @@ a:visited {
   text-align: center; }
 
 .addCart {
+  font-size: 10px;
+  letter-spacing: 2px;
   display: inline-block;
-  border: solid 2px black;
+  color: gray;
+  border: solid 2px gray;
+  background-color: #F6C555;
   cursor: default;
   float: right;
   margin-top: 5%;
@@ -357,6 +362,8 @@ a:visited {
   text-align: center; }
 
 .detailDesc {
+  font-size: 13px;
+  letter-spacing: 2px;
   text-align: right;
   width: 40%;
   float: right; }
